# TwinGuard-Swarm-Gazebo

./: .gitignore  README.md  docker-compose.yaml
docs/: architecture.md  engineering_plan.md  environment.md  quickstart.md  topic_contract.md
ros2_ws/src/twinguard_swarm_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/twinguard_swarm_bringup/launch/: twinguard_integrity.launch.py  twinguard_single_uav_replay_mission.launch.py  twinguard_three_uav_replay_mission.launch.py
ros2_ws/src/twinguard_swarm_integrity/: package.xml  setup.py
ros2_ws/src/twinguard_swarm_integrity/twinguard_swarm_integrity/: __init__.py  core.py  formation_supervisor.py  integrity_node.py
ros2_ws/src/twinguard_swarm_integrity_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/twinguard_swarm_integrity_cpp/include/twinguard_swarm_integrity_cpp/: offboard_supervisor.hpp  trust_scorer.hpp
ros2_ws/src/twinguard_swarm_integrity_cpp/src/: formation_supervisor_node.cpp  integrity_node.cpp  offboard_supervisor.cpp  trust_scorer.cpp
ros2_ws/src/twinguard_swarm_nav2_cpp/: CMakeLists.txt  package.xml  twinguard_bt_nodes.xml  twinguard_costmap_layer.xml
ros2_ws/src/twinguard_swarm_nav2_cpp/include/twinguard_swarm_nav2_cpp/: integrity_costmap_layer.hpp  is_agent_trustworthy.hpp
ros2_ws/src/twinguard_swarm_nav2_cpp/params/: twinguard_nav2_snippet.yaml
ros2_ws/src/twinguard_swarm_nav2_cpp/src/: integrity_costmap_layer.cpp  is_agent_trustworthy.cpp
ros2_ws/src/twinguard_swarm_planning_cpp/include/twinguard_swarm_planning_cpp/: astar_planner.hpp
ros2_ws/src/twinguard_swarm_planning_cpp/src/: bt_nodes.cpp
