<?xml version="1.0"?>
<package format="3">
  <name>twinguard_swarm_bringup</name>
  <version>0.1.0</version>
  <description>Launch and configuration package for TwinGuard ROS2/Gazebo/PX4 swarm experiments.</description>
  <maintainer email="nitin@example.com">Nitin</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>twinguard_swarm_integrity</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
