<?xml version="1.0"?>
<package format="3">
  <name>twinguard_swarm_integrity</name>
  <version>0.1.0</version>
  <description>Digital twin integrity, trust, and resilient formation logic for UAV swarms.</description>
  <maintainer email="nitin@example.com">Nitin</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
