<?xml version="1.0"?>
<package format="3">
  <name>twinguard_swarm_integrity_cpp</name>
  <version>0.1.0</version>
  <description>C++ digital-twin integrity scoring and trust management for UAV swarm supervision.</description>
  <maintainer email="nitin@example.com">Nitin</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>diagnostic_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
